--- a/JN_Vandermonde.ipynb
+++ b/JN_Vandermonde.ipynb
@@ -48,11 +48,11 @@
     "    '''\n",
     "    matriz = []\n",
     "    for i in range(len(valores_x)):\n",
-    "        c = []\n",
+    "        linha = []\n",
     "        for j in range(tamanho):\n",
-    "            d = (valores_x[i])**j\n",
-    "            c.append(d)\n",
-    "        matriz.append(c)\n",
+    "            valor = (valores_x[i])**j\n",
+    "            linha.append(valor)\n",
+    "        matriz.append(linha)\n",
     "    return matriz\n",
     "\n",
     "qntd_pontos = 5 #int(input())\n",
@@ -62,6 +62,13 @@
     "\n",
     "for i in A:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A partir dos valores da quantidade de pontos e dos valores de x, foi possível calcular a matriz de Vandermonde"
    ]
   },
   {
@@ -87,6 +94,13 @@
     "\n",
     "for i in b:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Com os valores da função foi possível construir a matriz 'b'"
    ]
   },
   {
@@ -121,6 +135,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -149,24 +168,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
