--- a/JN_Vandermonde.ipynb
+++ b/JN_Vandermonde.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Método de Vandermonde"
+    "## Método de Vandermonde"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* É importado a biblioteca numpy e um método para calcular a matriz inversa"
+    "#####  É importado a biblioteca numpy e um método para calcular a matriz inversa"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A partir dos valores da quantidade de pontos e dos valores de x, foi possível calcular a matriz de Vandermonde"
+    "#####  A partir dos valores da quantidade de pontos e dos valores de x, foi possível calcular a matriz de Vandermonde"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Com os valores da função foi possível construir a matriz 'b'"
+    "#####  Com os valores da função foi possível construir a matriz 'b'"
    ]
   },
   {
@@ -137,7 +137,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#####  Multiplicando a inversa de 'A' por 'b', obtemos uma lista de coeficientes que podemos tranformar no polinomio"
+   ]
   },
   {
    "cell_type": "code",
@@ -170,7 +172,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### Aplicando o valor da interpolação no polinomio, calculamos o valor esperado"
+   ]
   },
   {
    "cell_type": "markdown",
