--- a/JN_Vandermonde.ipynb
+++ b/JN_Vandermonde.ipynb
@@ -26,18 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1940, 3763600, 7301384000, 14164684960000]\n",
-      "[1, 1950, 3802500, 7414875000, 14459006250000]\n",
-      "[1, 1960, 3841600, 7529536000, 14757890560000]\n",
-      "[1, 1970, 3880900, 7645373000, 15061384810000]\n",
-      "[1, 1980, 3920400, 7762392000, 15369536160000]\n"
+      "Digite a quantida de pontos: 5\n",
+      "Digite os valores de x: 1940 1950 1960 1970 1980\n",
+      "[1.0, 1940.0, 3763600.0, 7301384000.0, 14164684960000.0]\n",
+      "[1.0, 1950.0, 3802500.0, 7414875000.0, 14459006250000.0]\n",
+      "[1.0, 1960.0, 3841600.0, 7529536000.0, 14757890560000.0]\n",
+      "[1.0, 1970.0, 3880900.0, 7645373000.0, 15061384810000.0]\n",
+      "[1.0, 1980.0, 3920400.0, 7762392000.0, 15369536160000.0]\n"
      ]
     }
    ],
@@ -55,8 +57,8 @@
     "        matriz.append(linha)\n",
     "    return matriz\n",
     "\n",
-    "qntd_pontos = 5 #int(input())\n",
-    "valores_x = [1940, 1950, 1960, 1970, 1980] #list(map(float,input().split()))\n",
+    "qntd_pontos = int(input(\"Digite a quantida de pontos: \")) #5\n",
+    "valores_x = list(map(float,input(\"Digite os valores de x: \").split())) #1940 1950 1960 1970 1980\n",
     "A = matriz_vm(qntd_pontos,valores_x)\n",
     "A_inv = inv(np.array(A))\n",
     "\n",
@@ -73,13 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Digite os valores de y: 132.165 151.326 179.323 203.302 226.542\n",
       "132.165\n",
       "151.326\n",
       "179.323\n",
@@ -89,7 +92,7 @@
     }
    ],
    "source": [
-    "valores_y = [132.165, 151.326, 179.323, 203.302, 226.542] #list(map(float,input().split()))\n",
+    "valores_y = list(map(float,input(\"Digite os valores de y: \").split())) #132.165 151.326 179.323 203.302 226.542\n",
     "b = np.array(valores_y)\n",
     "\n",
     "for i in b:\n",
@@ -164,7 +167,7 @@
     "        p_x += coeficientes[i] * (x**i)\n",
     "    return p_x\n",
     "\n",
-    "x = 1965 #float(input())\n",
+    "x = float(input(\"Digite o valor a ser interpolado: \")) #1965\n",
     "p = interpolacao(coeficientes,x)\n",
     "print(p)"
    ]
@@ -175,11 +178,6 @@
    "source": [
     "##### Aplicando o valor da interpolação no polinomio, calculamos o valor esperado"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
