--- a/JN_Vandermonde.ipynb
+++ b/JN_Vandermonde.ipynb
@@ -146,13 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Digite o valor a ser interpolado: 1965\n",
       "191.98797941207886\n"
      ]
     }
