--- a/CN - Trabalho de interpolação.ipynb
+++ b/CN - Trabalho de interpolação.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# Problema:\n",
-    "## Medição de pressão numa coluna de um líquido com desidade variável.\n",
-    "* Nessa coluna está instalado barômetros medindo a pressão manométrica em 4 pontos diferentes.\n",
+    "## Medição de pressão numa coluna de um líquido com densidade e altura variável.\n",
+    "* Nessa coluna está instalado barômetros medindo a pressão manométrica em 5 pontos diferentes.\n",
     "<img src=\"t.png\">\n",
     "* Mas os engenheiros desejam desejam construir uma tubulação para escoar o líquido a uma profundidade de 2.7 metros abaixo do referencial de altura adotado. Para isso foi feita duas interpolações, com dois métodos diferentes, com os valores já conhecidos para estimar o valor da pressão naquele ponto."
    ]
@@ -16,6 +16,13 @@
    "metadata": {},
    "source": [
     "## Método de Vandermonde"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####  É importado a biblioteca numpy e um método para calcular a matriz inversa"
    ]
   },
   {
@@ -32,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####  É importado a biblioteca numpy e um método para calcular a matriz inversa"
+    "#####  A partir dos valores da quantidade de pontos e dos valores de x, foi possível calcular a matriz de Vandermonde"
    ]
   },
   {
@@ -81,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####  A partir dos valores da quantidade de pontos e dos valores de x, foi possível calcular a matriz de Vandermonde"
+    "#####  Com os valores da função foi possível construir a matriz 'b'"
    ]
   },
   {
@@ -114,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####  Com os valores da função foi possível construir a matriz 'b'"
+    "#####  Multiplicando a inversa de 'A' por 'b', obtemos uma lista de coeficientes que podemos tranformar no polinomio"
    ]
   },
   {
@@ -152,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####  Multiplicando a inversa de 'A' por 'b', obtemos uma lista de coeficientes que podemos tranformar no polinomio"
+    "##### Aplicando o valor da interpolação no polinomio, calculamos o valor esperado"
    ]
   },
   {
@@ -188,16 +195,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Aplicando o valor da interpolação no polinomio, calculamos o valor esperado"
+    "## Metodo de Newton\n",
+    "\n",
+    "São importadas as bibliotecas que iremos utilizar"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Metodo de Newton\n",
-    "\n",
-    "São importadas as bibliotecas que iremos utilizar"
+    "##### É importado a biblioteca numpy"
    ]
   },
   {
@@ -206,15 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from numpy.linalg import inv"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### É importado a biblioteca numpy"
+    "import numpy as np"
    ]
   },
   {
@@ -261,8 +260,8 @@
    "metadata": {},
    "source": [
     "A função acima gera a matriz com os valores de f(x) e é completa com os valores de 0\n",
-    "No primeiro laço de repetição i varia de 1 até a quantidade de pontos\n",
-    "no segundo laço j varia da mesma maneira de j\n",
+    "No primeiro laço de repetição, i varia de 1 até a quantidade de pontos;\n",
+    "no segundo laço j varia da mesma maneira.\n",
     "\n",
     "Perceba que a primeira coluna é composta com os valores de f(x)\n",
     "A função retorna então a matriz formada com as operações anteriores."
@@ -373,7 +372,7 @@
    "source": [
     "# Conclusão\n",
     "\n",
-    "* É possível concluir que os dois programas realizaram a interpolação corretamente e como segue o método e chegaram em resultados extremamente próximos."
+    "* É possível concluir que os dois programas realizaram a interpolação corretamente, como segue o método e chegaram em resultados extremamente próximos."
    ]
   }
  ],
